--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,3 +41,4 @@ collections:
         fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "text" }
+locale: 'fr'
