--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,10 +12,10 @@ collections:
     public_folder: ""
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "image", widget: "image", required: false}
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Titre", name: "title", widget: "string" }
+      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Image", name: "image", widget: "image", required: false}
+      - { label: "Corps", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     files:
