--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main
+local_backend: true
 media_folder: "static/images" # Folder where user uploaded files should go
 public_folder: "images"
 collections:
@@ -13,8 +14,8 @@ collections:
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
       - { label: "Titre", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "date" }
-      - { label: "Image", name: "image", widget: "image", required: false}
+      - { label: "Date", name: "date", widget: "date", default: '', dateFormat: 'DD-MM-YYYY'}
+      - { label: "Image", name: "image", widget: "image", required: true}
       - { label: "Corps", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
