--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,8 +14,8 @@ collections:
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
       - { label: "Titre", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "date", default: '', dateFormat: 'DD-MM-YYYY'}
-      - { label: "Image", name: "image", widget: "image", required: true}
+      - { label: "Date", name: "date", widget: "datetime", date_format: true, time_format: false }
+      - { label: "Image", name: "image", widget: "image", required: false }
       - { label: "Corps", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
