--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,15 +8,20 @@ collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/post
     label: "Posts" # Used in the UI
     folder: "content/posts" # The path to the folder where the documents are stored
-    path: "{{slug}}/index"
+    path: "{{year}}-{{month}}-{{day}}-{{slug}}/index"
     media_folder: "" # Save images in the post's own folder instead of the static folder
     public_folder: ""
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in front matter
-      - { label: "Titre", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "datetime", date_format: true, time_format: false }
-      - { label: "Image", name: "image", widget: "image", required: false }
+      - { label: "Titre",
+          name: "title", 
+          widget: "string" }
+      - { label: "Image", 
+          name: "image", 
+          widget: "image", 
+          required: false }
       - { label: "Corps", name: "body", widget: "markdown" }
+      - { label: "Date de publication", name: "date", widget: "datetime", default: "{{year}}-{{month}}-{{day}}", hidden: true }
   - name: "pages"
     label: "Pages"
     files:
