--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/post
     label: "Posts" # Used in the UI
     folder: "content/posts" # The path to the folder where the documents are stored
-    path: "{{year}}-{{month}}-{{day}}-{{slug}}/index"
+    path: "{{year}}-{{month}}-{{day}}-{{slug}}"
     media_folder: "" # Save images in the post's own folder instead of the static folder
     public_folder: ""
     create: true # Allow users to create new documents in this collection
@@ -21,7 +21,6 @@ collections:
           widget: "image", 
           required: false }
       - { label: "Corps", name: "body", widget: "markdown" }
-      - { label: "Date de publication", name: "date", widget: "datetime", default: "{{year}}-{{month}}-{{day}}", hidden: true }
   - name: "pages"
     label: "Pages"
     files:
