--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 local_backend: true
-media_folder: "static/images" # Folder where user uploaded files should go
+media_folder: "" # Folder where user uploaded files should go
 public_folder: "images"
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/post
