--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
       - { label: "Titre",
           name: "title", 
           widget: "string" }
+      - { name: "date", label: "Date", widget: "datetime" }
       - { label: "Image", 
           name: "image", 
           widget: "image", 
